infra/k8s/horpakjs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horpakjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horpakjs
  template:
    metadata:
      labels:
        app: horpakjs
    spec:
      containers:
        - name: horpakjs
          image: hongjsx/horpakjs
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mnt
              mountPath: /homes/app/.env.production
              subPath: .env
              readOnly: true
          resources:
            limits:
              cpu: '1000m' # 1.0 CPU-core
            requests:
              cpu: '500m' # 0.5 CPU-core
      volumes:
        - name: mnt
          configMap:
            name: horpakjs-env
---
apiVersion: v1
kind: Service
metadata:
  name: horpakjs-service
spec:
  selector:
    app: horpakjs
  ports:
    - name: horpakjs
      protocol: TCP
      port: 3000
      targetPort: 3000
